# code-maintainability-reporter-action

./: Dockerfile  LICENSE  Makefile  README.md  action.yml  diff_json.sh  entrypoint.sh  pyproject.toml
.github/workflows/: code-maintainability-report.yml
src/code_maintainability_reporter_action/: __init__.py
src/code_maintainability_reporter_action/cli/: diff.prompt.txt  diff.py  main.py
src/code_maintainability_reporter_action/core/: code_analyzer.py  code_analyzer_python.py  code_analyzer_typescript.py
tests/: conftest.py
tests/assets/code_py/: code1.py
