[project]
name = "code-maintainability-reporter-action"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "np-t-mikami", email = "t_mikami@neuralpocket.com" }
]
dependencies = [
    "radon>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code_maintainability_reporter_action"]
